--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 #root {
-    max-width: 1280px;
+    max-width: 1800px;
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
@@ -39,4 +39,76 @@
 
 .read-the-docs {
     color: #888;
+}
+
+#diceResultDisplay {
+    font-weight: bold;
+}
+
+#loginSection {
+    width: 300px;
+    margin: auto;
+}
+
+#lobbySection {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    margin: auto;
+}
+
+.top-game-row {
+    width: 33%;
+    margin: 0 auto;
+}
+
+.middle-game-row {
+    display: flex;
+}
+
+.middle-game-row > div {
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.bottom-game-row {
+    display: flex;
+}
+
+.bottom-game-row > div {
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+#actions {
+    display: flex;
+    flex-direction: column;
+}
+
+#tradeModal {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #383838;
+    border: 3px solid rgb(133, 133, 133);
+    border-radius: 3px;
+}
+
+#exchangeModal {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #383838;
+    border: 3px solid rgb(133, 133, 133);
+    border-radius: 3px;
+}
+
+.close-button {
+    position: absolute;
+    left: 5px;
+    top: -10px;
+    color: red;
+    font-size: 40px;
 }
