--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+    width: 90%;
+    height: 100%;
+}
+
 a {
     font-weight: 500;
     color: #646cff;
